# eventor-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: github-actions-ci.yml.example
src/eventor_mcp/: __init__.py  __main__.py  cache.py  cli.py  client.py  config.py  http_discovery.py  logging_config.py  mcp_bearer_auth.py  runtime.py  server.py  statistics.py  xml_parse.py
tests/: test_client_cache.py  test_config.py  test_http_discovery.py  test_mcp_bearer_auth.py  test_statistics.py  test_xml_parse.py
